--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 .title {
   font-family: 'Press Start 2P', cursive;
   color: #FEF2BF;
-  font-size: 2.5rem;
+  font-size: 3rem;
   margin: 3%;
 }
 
@@ -17,12 +17,17 @@ body {
 }
 
 .btn {
+  margin: 25px;
   display: inline-block;
   height: 200px;
   width: 200px;
-  margin: 25px;
-  border: 10px solid black;
+  border: 12px solid black;
   border-radius: 20%;
+}
+
+.btn:hover {
+  cursor: pointer;
+  box-shadow: 0 0 25px white;
 }
 
 .green {
